--- a/html,css/kokoa-2022-07-04.md
+++ b/html,css/kokoa-2022-07-04.md
@@ -1,5 +1,12 @@
 ## 코코아톡 #1.5-1.9
 ------
+
+<br>
+
+해당 강의는 [코코아톡 클론코딩](https://nomadcoders.co/kokoa-clone/lobby) 를 보고 작성함.
+
+<br>
+
 > 💡 웹사이트는 ***text (language)*** 파일일 뿐이다. 
 
  -> **브라우저**는 사용자가 작성한 *코드를 인식하여 구현*하는 역할을 맡는다.  
