--- a/html,css/kokoa-2022-07-04.md
+++ b/html,css/kokoa-2022-07-04.md
@@ -17,8 +17,8 @@
 > * **CSS** : 브라우저에게 웹사이트의 content가 *"어떻게 보여야 하는지"* 설명하는 역할
 > * **Javascript** : 브라우저의 '뇌' 역할을 담당 - interactivity(상호작용성)
 
-![bone](.img/../img/bone-skeleton.png)
-HTML - 뼈대 / CSS - 근육
+![bone](.img/../img/bone-skeleton.png)  
+* HTML - 뼈대 / CSS - 근육
 
 <br>
 
