--- a/html,css/kokoa-clone/kokoa-2022-07-07.md
+++ b/html,css/kokoa-clone/kokoa-2022-07-07.md
@@ -65,7 +65,7 @@ ex)
     </form>
 </body>
 ```
-![input](img/input.png)
+![input](img/input.png)    
 -> input box 생성
 
 <br>
@@ -79,7 +79,7 @@ ex) type attribute을 사용한 input 태그
     </form>
 </body>
 ```
-![color](img/input_color.png)
+![color](img/input_color.png)  
 -> color를 선택할 수 있는 옵션이 생김
 
 <br>
@@ -112,7 +112,7 @@ ex) placeholder와 type attribute을 사용한 input 태그
 <br>
 
 ---
-* 👓 **non-semantic tag**
+####👓 non-semantic tag
 >**`<div>`** 태그는 'division'이라는 단어에서 파생된 html tag.
 
 ```html
@@ -126,7 +126,7 @@ ex) placeholder와 type attribute을 사용한 input 태그
 
 <br>
 
-* 🕶 **semantic tag**
+####🕶 semantic tag
 >**`<header>`** 태그는 `<div>` 태그와 같은 기능을 가지지만 **읽기만 해도 의미를 짐작할 수 있다**는 점에서 차이가 있다.
 
 ```html
