--- a/html,css/kokoa-clone/kokoa-2022-07-08.md
+++ b/html,css/kokoa-clone/kokoa-2022-07-08.md
@@ -8,7 +8,7 @@
 1. 같은 html 파일에 html 코드와 css 코드를 함께 작성하는 방법
 2. html 파일과 css 파일을 분리 시켜 작성하는 방법 *(추천)*
 
-> ##### html코드와 css코드를 함께 작성 (inline)
+> ##### ✔️ html코드와 css코드를 함께 작성 (inline)
 
 * `<style>` 태그가 `<head>`태그 안에 들어 있어야 함.
 ```html
@@ -34,7 +34,7 @@
 
 <br>
 
->##### html파일과 css파일을 분리하여 별도로 생성 (external) ✨추천✨ 
+>##### ✔️ html파일과 css파일을 분리하여 별도로 생성 (external) ✨추천✨ 
 
 * `styles.css` 파일을 생성한 뒤 `<head>` 태그 안에 `<link href="styles.css rel="stylesheet" /">`를 추가한다.
 ```html
@@ -61,7 +61,7 @@
 
 <br>
 
-> ##### CSS 코드 작성 규칙
+> ##### ✔️ CSS 코드 작성 규칙
 
 * css가 하는 일은 html 태그의 속성을 가리키는 일 **(selector)** 이다. 
 *  `css(cascading style sheet)`는 cascading 속성을 띄기 때문에 **위에서부터 아래 순서** 로 코드를 읽고 적용시킨다.
@@ -120,7 +120,10 @@ ex)
     1. `margin`: block의 border(경계)로부터 바깥에 있는 공간
         * `margin: 20px 15px;` : 첫 번째로 쓴 `20px`는 **위,아래** 의 속성 / 두 번째로 쓴 `15px`는 **왼쪽, 오른쪽** 의 속성.
         * `margin: 20px 5px 12px 99px;` : 순서대로 **위, 오른쪽, 아래, 왼쪽 (시계방향)** 의 속성을 나타냄.
-        * ⚠️ 종종 위,아래 margin 설정 시, 두 개 이상의 속성의 위아래 값이 같을 때 하나로 취급되는 **[collapsing margins](https://www.w3schools.com/css/css_margin_collapse.asp)** 현상이 나타나기도 하기 때문에 주의해야 함.
+        * ⚠️ 종종 위,아래 margin 설정 시, 두 개 이상의 속성의 위아래 값이 같을 때 하나로 취급되는 **[collapsing margins](https://www.w3schools.com/css/css_margin_collapse.asp)** 현상이 나타나기도 하기 때문에 주의해야 함.  
+
+        <br>
+
         ![margin](img/collapsing-margin.png)  
         -> *분홍색 block* 과 *흰색 block* 의 위아래 margin 값이 같아서 마진 상쇄 현상이 일어남.
     2. `border`
