--- a/html,css/kokoa-clone/kokoa-2022-07-11.md
+++ b/html,css/kokoa-clone/kokoa-2022-07-11.md
@@ -4,7 +4,7 @@
 
 <br>
 
-#### position: fixed
+### position: fixed
 
 ➡️ 스크롤을 해도 요소가 그 자리에 그대로 위치해 있도록 설정하는 코드: **새로운 layer를 생성**하기 때문에 기존과는 다른 layer에 요소를 배치함.
 
@@ -31,12 +31,12 @@
 <br>
 
 ---
-#### position: static
+### position: static
 
 레이아웃이 박스를 처음 위치하는 곳에 두는 것을 뜻함.
 <br>
 
-#### position: relative
+### position: relative
 
 element가 처음 위치한 곳을 기준으로 수정하는 것을 뜻함.
 ```html
@@ -67,7 +67,7 @@ element가 처음 위치한 곳을 기준으로 수정하는 것을 뜻함.
 ![static](img/static.png)
 <br>
 
-##### ⬇️ **`position: relative`** 적용 ⬇️
+#### ⬇️ **`position: relative`** 적용 ⬇️
 ```html
 <head>
     <style>
@@ -100,7 +100,7 @@ element가 처음 위치한 곳을 기준으로 수정하는 것을 뜻함.
 ➡️ `green` block이 위, 좌로 10px씩 줄어든 것을 볼 수 있음.
 <br>
 
-#### position: absolute
+### position: absolute
 
 가장 가까운 relative 부모 기준으로 이동시켜주는 것.
 ```html
@@ -166,7 +166,7 @@ element가 처음 위치한 곳을 기준으로 수정하는 것을 뜻함.
 <br>
 
 ---
-#### pseudo selectors
+### pseudo selectors
 
 좀 더 세부적으로 element를 point해주는 것.
 * **처음과 마지막 `<div>`에게만 다른 배경색을 부여하는 방법**
@@ -209,7 +209,7 @@ element가 처음 위치한 곳을 기준으로 수정하는 것을 뜻함.
 <br>
 
 ---
-#### pseudo selectors
+### pseudo selectors
 attribute을 통해 어떤 것이든 선택할 수 있게 해주는 것.
 
 ```html
@@ -227,7 +227,7 @@ attribute을 통해 어떤 것이든 선택할 수 있게 해주는 것.
 <br>
 
 ---
-#### combinators
+### combinators
 동일한 이름이지만 위치가 다른 태그에 각기 다른 다른 속성 부여하기
 ```html
 ex)
