--- a/html,css/kokoa-clone/kokoa-2022-07-09.md
+++ b/html,css/kokoa-clone/kokoa-2022-07-09.md
@@ -4,7 +4,7 @@
 
 <br>
 
-#### Padding
+### Padding
 
 * `padding`은 `margin`과 반대 개념.
   > **margin**: block의 경계로부터 **바깥**에 있는 공간
@@ -13,14 +13,14 @@
   * `padding: 20px 15px;` : 첫 번째로 쓴 `20px`는 **위,아래** 의 속성 / 두 번째로 쓴 `15px`는 **왼쪽, 오른쪽** 의 속성.
   * `padding: 20px 5px 12px 99px;` : 순서대로 **위, 오른쪽, 아래, 왼쪽 (시계방향)** 의 속성을 나타냄.
 
-##### ❗️주의해야 할 속성 (복습)
+#### ❗️주의해야 할 속성 (복습)
 * **margin의 inline**은 block과 달리 ***높이와 너비** 요소를 갖고 있지 않다.* -> 높이와 너비 요소를 적용시키고 싶다면 **block**으로 변경해줘야 한다.
 * **padding** 은 상관 없이 사방으로 요소를 가질 수 있다.
 
 <br>
 
 ---
-#### `html` 파일 내에서 각기 다른 `<div>` 태그에 css 속성을 적용하는 방법 - <u>id</u> 부여하기
+### `html` 파일 내에서 각기 다른 `<div>` 태그에 css 속성을 적용하는 방법 - <u>id</u> 부여하기
 * 각 속성에 id를 부여한 뒤 #을 통해 id를 호출하여 속성을 부여해주면 된다.
 ```html
 <head> <!--앞에 '#'을 작성하면 id를 가리킨다는 것을 의미한다-->
@@ -54,7 +54,7 @@
 <br>
 
 ---
-#### Border
+### Border
 
 >[border 디자인 참고 링크](https://developer.mozilla.org/ko/docs/Web/CSS/border-style)
 
@@ -178,7 +178,7 @@ Classes 속성을 써야 할 상황 예시를 들어보자.
 <br>
 
 ---
-#### inline-block
+### inline-block
 * `inline-block`은 block처럼 인식하게 해주면서 동시에 바로 옆에 다른 요소가 올 수 있도록 해준다.
 
 ⚠️ 하지만 이 방식은 고루하며 정해진 형식이 없고 여러가지 문제가 많다. (반응형 디자인도 지원하지 않음 ㅠㅠ)
@@ -186,7 +186,7 @@ Classes 속성을 써야 할 상황 예시를 들어보자.
 
 <br>
 
-#### flexbox
+### flexbox
 >**flexbox 사용 시 지켜야 할 규칙**
 * 자식 element에 명시하지 않고 부모 element에만 명시해야 함.
    ➡️ 그러기 위해서는 부모 element를 **flex container**로 만들어줘야 한다.
